Fixing logo spacing

--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -204,6 +204,7 @@ body.with-header {
 	font-style: normal;
 	font-size: 32px;
 	margin-top: 40px;
+	margin-bottom: 0px;
 }
 
 .socials-container {
